--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^2.0.1",
     "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
