--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BASE_URL = http://localhost:5000
+# BASE_URL = http://localhost:5000
+BASE_URL = https://mazadey-server.herokuapp.com
 
 DB_URI = 'mongodb+srv://karishma027:Kari8488@cluster0.t1yfk.mongodb.net/mzadey'
 
