--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,8 +22,12 @@
     "mongoose": "^6.7.0",
     "mongoose-sequence": "^5.3.1",
     "multer-gridfs-storage": "^5.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0",
     "stripe": "^10.17.0",
     "twilio": "^3.83.1",
+    "uniqid": "^5.4.0",
     "util": "^0.12.5",
     "validate-phone-number-node-js": "^0.0.1",
     "validator": "^13.7.0"
