--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -24,6 +25,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.0",
     "sequelize": "^6.26.0",
     "stripe": "^10.17.0",
     "twilio": "^3.83.1",
