--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "file-to-array-buffer": "^1.0.0",
     "formidable": "^2.0.1",
     "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -25,7 +26,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^2.6.6",
     "sequelize": "^6.26.0",
     "stripe": "^10.17.0",
     "twilio": "^3.83.1",
