--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
     "mongoose-sequence": "^5.3.1",
+    "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
