--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "i18next-node-fs-backend": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "node-fetch": "^2.6.6",
     "sequelize": "^6.26.0",
     "twilio": "^3.83.1",
